--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".activities.MainActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvMemoryMirror"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        tools:visibility="visible"
+        tools:listitem="@layout/rv_memory_mirror_items"
+        />
+    <TextView
+        android:id="@+id/tv_NoMemory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No Memory to display"
+        android:layout_gravity="center"
+        android:textSize="16sp"
+        tools:visibility="gone"
+        android:visibility="visible"/>
+
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabAddBtn"
         android:layout_width="wrap_content"
