--- a/app/src/main/res/layout/activity_add_memory_place.xml
+++ b/app/src/main/res/layout/activity_add_memory_place.xml
@@ -112,12 +112,16 @@
                     android:id="@+id/etLocation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
                     android:hint="@string/location"
                     android:inputType="text"
                     android:textColor="@color/colorAccent"
                     android:textColorHint="#546E7A"
                     tools:ignore="VisualLintTextFieldSize" />
             </com.google.android.material.textfield.TextInputLayout>
+
+
 
             <ImageView
                 android:id="@+id/ivDisplayImage"
