--- a/app/src/main/res/layout/activity_memory_place_detail.xml
+++ b/app/src/main/res/layout/activity_memory_place_detail.xml
@@ -38,7 +38,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_memoryImage"
         tools:text="Description testing hey this is sahil and i am testing description here what's up babies "/>
-<TextView
+
+
+    <Button
+        android:id="@+id/btnMap"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="@color/colorAccent"
+        android:text="View on Map"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.328"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_memoryImage"
+        app:layout_constraintVertical_bias="0.184"
+        tools:ignore="VisualLintButtonSize" />
+
+    <TextView
     android:id="@+id/tv_location"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
